# yeehaw

./: .gitignore  Cargo.toml  LICENSE  README.md  art.txt  barn_provider.md  package-lock.json  package.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json  session-status.sh
docs/plans/: 2026-01-23-yeehaw-cli-design.md  2026-01-23-yeehaw-cli-implementation.md  2026-01-23-yeehaw-cli-v02-design.md  2026-01-23-yeehaw-v02-implementation-plan.md  2026-01-26-livestock-detail-page.md  2026-01-26-night-sky-screensaver-design.md  2026-01-26-shared-yeehaw-design.md  2026-01-26-shared-yeehaw-implementation.md  2026-02-23-trails-design.md  2026-02-23-trails-implementation.md  2026-02-24-trails-v2-design.md  2026-02-24-trails-v2-implementation.md  2026-02-25-password-manager-design.md  2026-02-25-password-manager-implementation.md  2026-02-25-trails-gha-compat-design.md  2026-02-25-trails-gha-compat-implementation.md  2026-02-27-trail-improvements-design.md  2026-02-27-trail-improvements-implementation.md
examples/: config.yaml
examples/barns/: local.yaml
examples/projects/: demo.yaml
packaging/: install.ps1  install.sh
packaging/Formula/: yeehaw.rb
packaging/trails/: yeehaw-publish-patch.yml
scripts/: install.sh  test-shell-escape.ts
skills/: yeehaw-project-setup.skill
src/: app.rs  app.tsx  config.rs  context.rs  critters.rs  crontab.rs  detection.rs  editor.rs  git.rs  hooks.rs  index.tsx  main.rs  mcp-server.ts  mcp_server.rs  ranchhand_k8s.rs  ranchhand_terraform.rs  signals.rs  tmux.rs  types.rs  types.ts  update_check.rs  watcher.rs
src/components/: BarnHeader.tsx  BottomBar.tsx  ClaudeSplashScreen.tsx  CritterHeader.tsx  Header.tsx  HelpOverlay.tsx  HerdHeader.tsx  List.tsx  LivestockHeader.tsx  Markdown.tsx  Panel.tsx  PathInput.tsx  RanchHandHeader.tsx  ScrollableMarkdown.tsx  SplashScreen.tsx  StatusBar.tsx  TextArea.tsx  barn_header.rs  claude_splash.rs  confirm_dialog.rs  critter_header.rs  header.rs  help_overlay.rs  herd_header.rs  index.ts  list.rs  livestock_header.rs  markdown.rs  mod.rs  panel.rs  path_input.rs  ranchhand_header.rs  text_area.rs  text_input.rs  trail_header.rs  trail_steps.rs  worm_header.rs
src/hooks/: index.ts  useConfig.ts  useRemoteYeehaw.ts  useSessions.ts
src/issues/: auth.rs  github.rs  linear.rs  mod.rs  types.rs
src/lib/: config.ts  context.ts  critters.ts  detection.ts  editor.ts  errors.ts  git.ts  github.ts  hooks.ts  hotkeys.ts  index.ts  livestock.ts  mcp-validation.ts  paths.ts  ranchhand-detect.ts  ranchhand-k8s.ts  ranchhand-terraform.ts  shell.ts  signals.ts  ssh.ts  tmux-config.ts  tmux.ts  update-check.ts
src/slack/: listener.rs  mod.rs  runner.rs  sessions.rs
src/trails/: history.rs  mod.rs  native.rs  polling.rs  provider.rs  runner.rs
src/vault/: crypto.rs  generator.rs  mod.rs
src/views/: BarnContext.tsx  CritterDetailView.tsx  CritterLogsView.tsx  (+28 more)
(+15 files in other folders)
