[package]
name = "yeehaw"
version = "0.1.3"
edition = "2021"
description = "Yeehaw — terminal ranch management for projects, servers, and Claude sessions"
license = "MIT"
repository = "https://github.com/Colmbus72/yeehaw"
homepage = "https://yeehaw.cool"
keywords = ["cli", "tui", "devops", "project-management", "claude"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "yeehaw"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization (YAML config files)
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# File paths
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unicode width for layout
unicode-width = "0.1"

# FIGlet ASCII art for headers
figlet-rs = "0.1"
notify = { version = "7", features = ["macos_kqueue"] }
rmcp = { version = "0.15.0", features = ["server", "transport-io", "macros"] }
schemars = "1"

# ZIP archive reading (for extracting SKILL.md from the embedded yeehaw-project-setup.skill)
zip = { version = "2", default-features = false, features = ["deflate"] }

ureq = { version = "2", features = ["json"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
regex = "1.12.3"

# Vault encryption
argon2 = "0.5"
aes-gcm = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
